--- a/.gitignore
+++ b/.gitignore
@@ -13,11 +13,12 @@ frontend/coverage
 frontend/build
 
 # misc
-.DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+frontend/.DS_Store
+frontend/.env.local
+frontend/.env.development.local
+frontend/.env.test.local
+frontend/.env.production.local
+frontend/.env
 
 npm-debug.log*
 yarn-debug.log*
